--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,6 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-included_files = ["public/**"]
+[functions]
+  included_files = ["public/**"]
+
